--- a/Video/video.html
+++ b/Video/video.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,11 +27,11 @@
     </header>
     <div class="sidebar">
         <div class="menu-container">
-            <a class="menu-item" href="../index.html" >
+            <a class="menu-item" href="../index.html">
                 <i class="fa-solid fa-house"></i>
                 <span>Home</span>
             </a>
-            <a class="menu-item" href="../Video/video.html" id="main-page" >
+            <a class="menu-item" href="../Video/video.html" id="main-page">
                 <i class="fas fa-regular fa-tv"></i>
                 <span>Video</span>
             </a>
@@ -56,8 +56,35 @@
             <i class="fas fa-solid fa-universal-access"></i>
             <a>Login</a>
         </div>
-    </div>  
-    
+    </div>
+    <div class="videos-container">
+        <div class="type-container">
+            <button class="videoType" onclick="openVideoTab(event, 'Follow')">Follow</button>
+            <button class="videoType" onclick="openVideoTab(event, 'Music')">Music</button>
+            <button class="videoType" onclick="openVideoTab(event, 'News')">News</button>
+        </div>
+        <div class="video" id="Follow">
+            
+        </div>
+        <div class="video" id="Music">
+            <div class="video-item">
+                <iframe width="1691" height="766" src="https://www.youtube.com/embed/LkOMIsEen1g"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <p>Rosalía Talks MOTOMAMI, Jimmy's "Motopapi" Energy and Harry Styles Texting Her | The Tonight Show</p>
+            </div>
+        </div>
+        <div class="video" id="News">
+            <div class="video-item">
+                <iframe width="1691" height="766" src="https://www.youtube.com/embed/LkOMIsEen1g"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <p>Rosalía Talks MOTOMAMI, Jimmy's "Motopapi" Energy and Harry Styles Texting Her | The Tonight Show</p>
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
