--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
                 </div>
                 <div class="reaction-info">
                     <div class="like">
-                        <span id="likes"></span>
-                        <button id="like" onclick="liked()">
+                        <span class="likes"></span>
+                        <button class="like" onclick="liked()">
                             <i class="fa-solid fa-heart"></i>
                             <span>Likes</span>
                         </button>
                     </div>
                     <div>
-                        <span id="comments"></span>
-                        <button id="comment" class="comment">
+                        <span class="comments"></span>
+                        <button class="comment" class="comment">
                             <i class="fa-solid fa-message"></i>
                             <span>Comment</span>
                         </button>
@@ -112,7 +112,7 @@
                             alt="">
                         <div class="comment-content">
                             <p class="comment-name">Tom</p>
-                            <p>Nice job</p>
+                            <p>Good work!</p>
                         </div>
                     </div>
                 </div>
