--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
                     <div>
                         <span class="comments"></span>
-                        <button class="comment" class="comment">
+                        <button class="comments" class="comment">
                             <i class="fa-solid fa-message"></i>
                             <span>Comment</span>
                         </button>
