--- a/Video/video.html
+++ b/Video/video.html
@@ -51,6 +51,7 @@
                 <i class="fas fa-solid fa-user"></i>
                 <span>Profile</span>
             </a>
+            <p class="menu-item" id="change-theme">Dark mode</p>
         </div>
         <div class="account">
             <i class="fas fa-solid fa-universal-access"></i>
