--- a/Voice/voice.html
+++ b/Voice/voice.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,7 +27,7 @@
     </header>
     <div class="sidebar">
         <div class="menu-container">
-            <a class="menu-item" href="../index.html" >
+            <a class="menu-item" href="../index.html">
                 <i class="fa-solid fa-house"></i>
                 <span>Home</span>
             </a>
@@ -39,7 +39,7 @@
                 <i class="fas fa-solid fa-comments"></i>
                 <span>Chats</span>
             </a>
-            <a class="menu-item" href="../Voice/voice.html" id="main-page" >
+            <a class="menu-item" href="../Voice/voice.html" id="main-page">
                 <i class="fas fa-solid fa-headset"></i>
                 <span>Audio</span>
             </a>
@@ -51,14 +51,27 @@
                 <i class="fas fa-solid fa-user"></i>
                 <span>Profile</span>
             </a>
-            <a class="menu-item" href="../Setting/setting.html">
-                <i class="fas fa-solid fa-toolbox"></i>
-                <span>Setting</span>
-            </a>
+            <p class="menu-item" id="change-theme">Dark mode</p>
         </div>
         <div class="account">
             <i class="fas fa-solid fa-universal-access"></i>
             <a>Login</a>
+        </div>
+    </div>
+    <div class="Voice-container">
+        <div class="type-container">
+            <button class="voiceType" onclick="openVoiceTab(event, 'Follow');">Follow</button>
+            <button class="voiceType" onclick="openVoiceTab(event, 'Popular')">Popular</button>
+            <button class="voiceType" onclick="openVoiceTab(event, 'Topic')">Topic</button>
+        </div>
+        <div class="voice" id="Follow">
+            
+        </div>
+        <div class="voice" id="Popular">
+
+        </div>
+        <div class="voice" id="Topic">
+
         </div>
     </div>
     <script src="app.js"></script>
