--- a/Games/game.html
+++ b/Games/game.html
@@ -51,10 +51,7 @@
                 <i class="fas fa-solid fa-user"></i>
                 <span>Profile</span>
             </a>
-            <a class="menu-item" href="../Setting/setting.html">
-                <i class="fas fa-solid fa-toolbox"></i>
-                <span>Setting</span>
-            </a>
+            <p class="menu-item" id="change-theme">Dark mode</p>
         </div>
         <div class="account">
             <i class="fas fa-solid fa-universal-access"></i>
