--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -51,14 +51,39 @@
                 <i class="fas fa-solid fa-user"></i>
                 <span>Profile</span>
             </a>
-            <a class="menu-item" href="../Setting/setting.html">
-                <i class="fas fa-solid fa-toolbox"></i>
-                <span>Setting</span>
-            </a>
+            <p class="menu-item" id="change-theme">Dark mode</p>
         </div>
         <div class="account">
             <i class="fas fa-solid fa-universal-access"></i>
             <a>Login</a>
+        </div>
+    </div>
+    <div class="profile-container">
+        <div class="profile-info-container">
+            <div class="background-pic">
+                <img src="https://c4.wallpaperflare.com/wallpaper/122/607/789/family-guy-beautiful-backgrounds-desktop-wallpaper-preview.jpg" alt="">
+            </div>
+            <div class="profile-pic">
+                <img src="https://media.baamboozle.com/uploads/images/290734/1623915052_70635_url.jpeg" alt="">
+            </div>
+            <div class="profile-info">
+                <div class="name">
+                    <p id="realName">Tri To Vinh</p>
+                    <p id="accountName">@tritovinh1</p>
+                </div>
+                <div class="info">
+                    <i class="fa-solid fa-location-dot"> </i><span id="livingPlace">Ho Chi Minh city</span>
+                    <i class="fa-solid fa-cake-candles"> </i><span id="birthday">27 June 2006</span>
+                </div>
+            </div>
+            <div class="edit">
+                <button>Edit Profile</button>
+            </div>
+        </div>
+        <div class="write-post">
+            <i class="fas fa-solid fa-user"></i>
+            <input type="text" placeholder="What happened?" id="post-writing">
+            <button type="button" class="post-button2">Booming</button>
         </div>
     </div>
     <script src="app.js"></script>
