--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="account">
             <i class="fas fa-solid fa-universal-access"></i>
-            <a>Login</a>
+            <a href="./login/login.html" id="accountName">Login</a>
         </div>
     </div>
     <div class="mainpost-container">
