--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Boom social</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -42,10 +43,6 @@
             <a class="menu-item" href="./Voice/voice.html">
                 <i class="fas fa-solid fa-headset"></i>
                 <span>Audio</span>
-            </a>
-            <a class="menu-item" href="./Games/game.html">
-                <i class="fas fa-solid fa-gamepad"></i>
-                <span>Games</span>
             </a>
             <a class="menu-item" href="./Profile/profile.html">
                 <i class="fas fa-solid fa-user"></i>
