--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -35,17 +36,13 @@
                 <i class="fas fa-regular fa-tv"></i>
                 <span>Video</span>
             </a>
-            <a class="menu-item" href="./Chats/chat.html">
+            <a class="menu-item" href="../Chats/chat.html">
                 <i class="fas fa-solid fa-comments"></i>
                 <span>Chats</span>
             </a>
             <a class="menu-item" href="../Voice/voice.html">
                 <i class="fas fa-solid fa-headset"></i>
                 <span>Audio</span>
-            </a>
-            <a class="menu-item" href="../Games/game.html">
-                <i class="fas fa-solid fa-gamepad"></i>
-                <span>Games</span>
             </a>
             <a class="menu-item" href="../Profile/profile.html" id="main-page">
                 <i class="fas fa-solid fa-user"></i>
@@ -55,7 +52,7 @@
         </div>
         <div class="account">
             <i class="fas fa-solid fa-universal-access"></i>
-            <a>Login</a>
+            <a href="../login/login.html" id="accountName">Login</a>
         </div>
     </div>
     <div class="profile-container">
