--- a/login/login.html
+++ b/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Boom social</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Login</title>
 </head>
@@ -26,9 +27,9 @@
         </div>
         <div class="login">
             <div class="login-container">
-                <input type="text" placeholder="Email adress or phone number" class="login-form" required><br>
-                <input type="password" placeholder="Password" class="login-form" required><br>
-                <button type="button" id="login" onclick="join()">Log In</button> <hr>
+                <input type="text" placeholder="Your username" class="login-form" id="loginUsername" required><br>
+                <input type="password" placeholder="Password" class="login-form" id="loginPassword" required><br>
+                <button type="submit" id="login" onclick="join()">Log In</button> <hr>
                 <button id="signup" onclick="signUp()">Sign Up</button>
             </div>
         </div>
