--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -69,10 +69,10 @@
                     <p id="realName"></p>
                     <p id="accountName"></p>
                 </div>
-                <div class="info">
+                <!-- <div class="info">
                     <i class="fa-solid fa-location-dot"> </i><span id="livingPlace"> Ho Chi Minh city</span>
                     <i class="fa-solid fa-cake-candles"> </i><span id="birthday"> 27 June 2006</span>
-                </div>
+                </div> -->
             </div>
             <div class="edit">
                 <button>Edit Profile</button>
