--- a/login/login.html
+++ b/login/login.html
@@ -41,9 +41,9 @@
                 <p>It's simple and quick.</p>
             </div>
             <div class="form">
-                <input type="text" placeholder="Your fullname" class="signup-form"><br>
-                <input type="text" placeholder="Username" class="signup-form"><br>
-                <input type="password" placeholder="Passwords" class="signup-form"><br>
+                <input type="text" placeholder="Your fullname" class="signup-form" id="newName" required><br>
+                <input type="text" placeholder="Username" class="signup-form" id="newUsername" required><br>
+                <input type="password" placeholder="Passwords" class="signup-form" id="newPassword"><br>
                 <label for="date">Date of birth</label>
                 <input type="date"><br>
                 <button id="signup-final" onclick="signup()">Sign Up</button>
